[gd_scene load_steps=8 format=3 uid="uid://cmkfyyhc4a28y"]

[ext_resource type="Shader" uid="uid://ba5nk0x4ggpv2" path="res://scenes/shader/blur.gdshader" id="1_jonfr"]
[ext_resource type="Script" uid="uid://jhuqa1kweg76" path="res://scenes/ui/settings.gd" id="2_6uwl2"]
[ext_resource type="Texture2D" uid="uid://b5jrq1tx3uskg" path="res://texture/ui/Pxiel-Art-UI-borders_18.png" id="3_486n4"]
[ext_resource type="Texture2D" uid="uid://bfkrrfd5mg0yb" path="res://texture/ui/MediumArrow-Right@0.5x.png" id="4_76okh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ei66u"]
shader = ExtResource("1_jonfr")
shader_parameter/lod = 5.0
shader_parameter/mix_percentage = 0.586

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ur30q"]
texture = ExtResource("3_486n4")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_au4av"]

[node name="Settings" type="ColorRect"]
material = SubResource("ShaderMaterial_ei66u")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_6uwl2")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(640, 360)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ur30q")

[node name="Back" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -39.0
offset_top = 13.0
offset_right = -19.0
offset_bottom = 33.0
grow_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_au4av")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="Panel/Back"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_76okh")
expand_mode = 1

[node name="HBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 25.0
offset_top = 22.0
offset_right = 354.0
offset_bottom = 336.0

[node name="按键" type="Control" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/按键"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -8.5
offset_right = 134.0
offset_bottom = 8.5
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "按键位置"

[node name="key_settings" type="Button" parent="Panel/HBoxContainer/按键"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -9.0
offset_bottom = 9.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 10
text = "编辑"

[node name="遥感" type="Control" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/遥感"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -8.5
offset_right = 134.0
offset_bottom = 8.5
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "遥感类型"

[node name="joy_1" type="Button" parent="Panel/HBoxContainer/遥感"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -14.0
offset_right = -51.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 10
text = "左右"

[node name="joy_2" type="Button" parent="Panel/HBoxContainer/遥感"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -14.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 10
text = "陀螺"

[connection signal="pressed" from="Panel/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/按键/key_settings" to="." method="_on_key_settings_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/遥感/joy_1" to="." method="_on_joy_1_pressed" binds= [false]]
[connection signal="pressed" from="Panel/HBoxContainer/遥感/joy_2" to="." method="_on_joy_1_pressed" binds= [true]]
